--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,14 +20,14 @@ classifiers = [
 ]
 requires-python = ">=3.8"
 # Declare any run-time dependencies that should be installed with the package.
-#dependencies = [
-#    "importlib-resources;python_version<'3.10'",
-#]
+dependencies = [
+    "ase",
+]
 
 # Update the urls once the hosting is set up.
-#[project.urls]
-#"Source" = "https://github.com/<username>/seamm_ase/"
-#"Documentation" = "https://seamm_ase.readthedocs.io/"
+[project.urls]
+"Source" = "https://github.com/molssi-seamm/seamm_ase/"
+"Documentation" = "https://molssi-seamm.github.io/seamm_ase/"
 
 [project.optional-dependencies]
 test = [
