--- a/devtools/conda-envs/test_env.yaml
+++ b/devtools/conda-envs/test_env.yaml
@@ -8,6 +8,11 @@ dependencies:
   - python
   - pip
 
+  - bibtexparser
+  - numpy
+  - seamm-util
+  - tabulate
+  
   # Testing
   - black
   - codecov
